--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^7.2.1",
     "animate.css": "^4.1.0",
     "bootstrap": "^4.5.0",
+    "firebase": "^7.14.6",
     "node-sass": "^4.14.1",
+    "re-base": "^4.0.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
