--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
     "tailwindcss": "^1.4.6",
     "uuid": "^8.1.0"
   },
