--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^5.2.0",
     "react-router-redux": "^4.0.8",
     "react-scripts": "3.4.1",
+    "react-toastify": "^6.0.5",
     "redux": "^4.0.5",
     "tailwindcss": "^1.4.6",
     "uuid": "^8.1.0"
