--- a/package.json
+++ b/package.json
@@ -8,12 +8,20 @@
     "@testing-library/user-event": "^7.2.1",
     "animate.css": "^4.1.0",
     "bootstrap": "^4.5.0",
+    "firebase": "^7.14.6",
     "node-sass": "^4.14.1",
+    "re-base": "^4.0.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "3.4.1",
-    "tailwindcss": "^1.4.6"
+    "react-toastify": "^6.0.5",
+    "redux": "^4.0.5",
+    "tailwindcss": "^1.4.6",
+    "uuid": "^8.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
